update ath10k firmware

--- a/.config
+++ b/.config
@@ -6753,7 +6753,7 @@ CONFIG_USB_CONFIGFS_F_TCM=y
 CONFIG_TYPEC=m
 CONFIG_TYPEC_TCPM=m
 CONFIG_TYPEC_FUSB302=m
-# CONFIG_TYPEC_WCOVE is not set
+CONFIG_TYPEC_WCOVE=m
 CONFIG_TYPEC_UCSI=m
 CONFIG_UCSI_ACPI=m
 CONFIG_TYPEC_TPS6598X=m
