still trying to figure out CI

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,9 +1,32 @@
 before_script:
   - apt-get update -qq && apt-get install -y -qq build-essential ncurses-dev libproc-processtable-perl fakeroot libelf-dev libssl-dev bison flex pigz bc
 
-deb-pkg:
+stages:
+  - test
+  - build
+  - deploy
+
+test:
+  stage: test
+  script: 
+    - echo "Running tests"
+    - make modules
+
+build:
+  stage: build
+  script: 
+    - echo "Building the app"
+    - make deb-pkg
+  when: manual
+
+deploy:
+  stage: deploy
   script:
-    - make -j12 deb-pkg
-    - mkdir public
-    - mv ../linux*deb public/
+    - echo "Deploy to staging server"
+  environment:
+    name: staging
+    url: https://staging.example.com
+  when: manual
+  only:
+  - master
 
