--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,5 @@
 *.c   diff=cpp
 *.h   diff=cpp
-drivers/hid/hid-logitech-dj.c
-drivers/media/dvb-frontends/stv090x.c
-drivers/media/dvb-frontends/stv090x.h
+drivers/hid/hid-logitech-dj.c merge=ours
+drivers/media/dvb-frontends/stv090x.c merge=ours
+drivers/media/dvb-frontends/stv090x.h merge=ours
